kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend 
spec:
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: http
  selector:
    app: frontend
