kustomize/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend 
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - soybean.amoylabs.com
    secretName: tls-wildcard-amoylabs-com
  rules:
    - host: soybean.amoylabs.com 
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
